--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
   <head>
     <title>Tank.IO</title>
     <style>
+      .canvas-container{
+        width:100%;
+        text-align: center;
+        margin-top:50px;
+      }
       canvas {
+        display:inline;
         width: 800px;
         height: 600px;
         border: 5px solid black;
@@ -11,7 +17,9 @@
     <script src="/socket.io/socket.io.js"></script>
   </head>
   <body>
-    <canvas id="canvas"></canvas>
+    <div class="canvas-container">
+      <canvas id="canvas"></canvas>
+    </div>
   </body>
   <script src="/static/game.js"></script>
 </html>
