--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
         margin-top:50px;
       }
       canvas {
-        display:inline;
         width: 800px;
         height: 600px;
         border: 5px solid black;
@@ -17,9 +16,7 @@
     <script src="/socket.io/socket.io.js"></script>
   </head>
   <body>
-    <div class="canvas-container">
-      <canvas id="canvas"></canvas>
-    </div>
+    <canvas id="myCanvas"></canvas>
   </body>
   <script src="/static/game.js"></script>
 </html>
