Added movement for client

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <script src="/socket.io/socket.io.js"></script>
   </head>
   <body>
-    <canvas id="myCanvas"></canvas>
+    <div class="canvas-container">
+      <canvas id="myCanvas"></canvas>
+    </div>
   </body>
   <script src="/static/game.js"></script>
 </html>
