--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       }
     </style>
     <script src="/socket.io/socket.io.js"></script>
+    <script src="/static/CanvasInput.js"></script>
   </head>
   <body>
     <div class="canvas-container">
