Added ICON to HTML file
-DBALL.io icon beside tab now

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-    <title>Tank.IO</title>
+    <title>DBall.io</title>
+    <link rel="shortcut icon" href="/static/dball.ico"> <!-- Add icon here -->
     <style>
       .canvas-container{
         width:100%;
