--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
   <head>
     <title>DBall.io</title>
     <link rel="shortcut icon" href="/static/dball.ico"> <!-- Add icon here -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <style>
       *{
+        color:#efefef;
         margin:0px;
+        font-family: 'Roboto', sans-serif;
       }
       .canvas-container{
         width:100%;
@@ -21,11 +24,66 @@
       }
       nav{
         position: absolute;
-        left:50%;
+        width:300;
+        height:135;
+        left:calc(50% - 148px);
         top:50%;
+      }
+      /* PLAY BUTTONS */
+      .flex-container {
+        padding: 0;
+        margin: 0;
+        list-style: none;
+        height:100%;
+
+        -ms-box-orient: horizontal;
+        display: -webkit-box;
+        display: -moz-box;
+        display: -ms-flexbox;
+        display: -moz-flex;
+        display: -webkit-flex;
+        display: flex;
+
+        -webkit-justify-content: space-around;
+        justify-content: space-between;
+        -webkit-flex-flow: row wrap;
+        flex-flow: row wrap;
+        -webkit-align-items: stretch;
+        align-items: stretch;
+      }
+
+      input[type=text] {
+        width: 100%;
+        height:40px;
+        padding: 12px 20px;
+        color:#999999;
+        background-color: #d9d9d9;
+        border:none;
+        margin-bottom:2px;
+        text-transform: none;
+      }
+
+      #name-input           { flex: 1;}
+      #play-button          { flex: 1 100%; }
+      #create-room-button   { flex: 1; margin-right:2px;}
+      #join-room-button     { flex: 1; margin-left:2px;}
+
+      .flex-item {
+        background: tomato;
+        padding: 5px;
+        height:30px;
+
+        text-transform: capitalize;
+        color: white;
+        font-size: 1.4em;
+        letter-spacing: -1px;
+        text-align: center;
+
 
       }
+      /* BUTTON */
     </style>
+
     <script src="/socket.io/socket.io.js"></script>
     <script src="/static/CanvasInput.js"></script>
   </head>
@@ -33,9 +91,12 @@
     <div class="canvas-container">
       <canvas id="myCanvas"></canvas>
       <nav>
-      <a href="#" onClick="startGame()">Play solo</a>
-      <a href="#">Create room</a>
-      <a href="#">Join room</a>
+        <div class="flex-container" id="gui">
+          <input class="flex-item" type="text" onclick="clearfield();" id="name-input" value="Enter your name here" maxlength="16" autofocus>
+          <a href="#" class="flex-item" id="play-button" onClick="startGame()">Play solo</a>
+          <a href="#" class="flex-item" id="create-room-button">Create room</a>
+          <a href="#" class="flex-item" id="join-room-button">Join room</a>
+        </div>
       </nav>
     </div>
   </body>
