--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         text-transform: none;
       }
 
-      #gui{
+      #main-section{
         position: absolute;
         width:300;
         height:135;
@@ -65,8 +65,16 @@
       }
 
       #name-input           { flex: 1;}
-      #play-button          { flex: 1 100%; }
-      #create-room-button   { flex: 1; margin-right:2px;}
+
+      #play-button{
+        flex: 1 100%;
+        background-color: #6ae646;
+      }
+      #create-room-button{
+        flex: 1;
+        margin-right:2px;
+        background-color: DodgerBlue;
+      }
       #join-room-button     { flex: 1; margin-left:2px;}
 
       .flex-item {
@@ -81,11 +89,11 @@
         text-align: center;
       }
       /* ROOMS */
-      #rooms{
+      #lobby{
         display:none;
         position: absolute;
         width:500;
-        height:275;
+        height:340;
         left:calc(50% - 248px);
         top:30%;
       }
@@ -114,28 +122,30 @@
   <body>
     <div class="canvas-container">
       <canvas id="myCanvas"></canvas>
-      <div class="flex-container" id="gui">
+      <div class="flex-container" id="main-section">
         <input class="flex-item" type="text" onclick="clearfield();" id="name-input" value="Enter your name here" maxlength="16" autofocus>
         <a href="#" class="flex-item" id="play-button" onClick="startGame()">Play solo</a>
         <a href="#" class="flex-item" id="create-room-button" onClick="createRoom()">Create room</a>
-        <a href="#" class="flex-item" id="join-room-button">Join room</a>
+        <a href="#" class="flex-item" id="join-room-button" onClick="joinTeamInput()">Join room</a>
       </div>
-      <div class="container">
-        <div class="flex-container" id="rooms" display="none">
-          <a href="#"class="flex-item player" id="bluteam">BLUE</a>
-          <a href="#"class="flex-item player" id="redteam">RED</a>
-          <p class="flex-item player" id="bp1"></p>
-          <p class="flex-item player" id="rp1"></p>
-          <p class="flex-item player" id="bp2"></p>
-          <p class="flex-item player" id="rp2"></p>
-          <p class="flex-item player" id="bp3"></p>
-          <p class="flex-item player" id="rp3"></p>
-          <p class="flex-item player" id="bp4"></p>
-          <p class="flex-item player" id="rp5"></p>
-          <p class="flex-item player" id="bp5"></p>
-          <p class="flex-item player" id="rp5"></p>
-
-        </div>
+      <div class="flex-container" id="lobby" display="none">
+        <a href="#"class="flex-item player" id="bluteam">BLUE</a>
+        <a href="#"class="flex-item player" id="redteam">RED</a>
+        <p class="flex-item player" id="bp1"></p>
+        <p class="flex-item player" id="rp1"></p>
+        <p class="flex-item player" id="bp2"></p>
+        <p class="flex-item player" id="rp2"></p>
+        <p class="flex-item player" id="bp3"></p>
+        <p class="flex-item player" id="rp3"></p>
+        <p class="flex-item player" id="bp4"></p>
+        <p class="flex-item player" id="rp5"></p>
+        <p class="flex-item player" id="bp5"></p>
+        <p class="flex-item player" id="rp5"></p>
+        <a href="#" class="flex-item">Switch Teams</a>
+        <a href="#" class="flex-item">Leave team</a>
+      </div>
+      <div class="flex-container" id="join-section" display ="none">
+        <input class="flex-item" type="text" onclick="clearfield();" id="code-input" value="Enter your CODE here" maxlength="4" autofocus>
       </div>
     </div>
   </body>
