--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         display:flex;
         position: absolute;
         width:300;
-        height:135;
+        height:150;
         left:calc(50% - 148px);
         top:50%;
       }
@@ -75,7 +75,7 @@
       }
       #create-room-button{
         flex: 1;
-        margin-right:2px;
+        margin-right:10px;
         background-color: DodgerBlue;
       }
 
@@ -101,12 +101,13 @@
         display: none;
         position: absolute;
         width:500;
-        height:340;
+        height:400;
         left:calc(50% - 248px);
         top:30%;
       }
 
       #lobby-section .flex-item{
+                text-transform: none;
         width:235px;
       }
 
@@ -128,6 +129,20 @@
         background-color: gray;
       }
 
+      #room-num{
+        background-color: gray;
+        width:100% !important;
+        padding: 10px 0px 5px 0px;
+      }
+
+      #code-num{
+        margin-left:10px;
+        color:black;
+        display:inline;
+        background-color: #efefef;
+        padding:1px 10px 2px 10px;
+        letter-spacing: 0px;
+      }
       /* JOIN SECTION */
       #join-section{
         display:none;
@@ -162,9 +177,15 @@
         <input class="flex-item" type="text" onclick="clearfield();" id="name-input" value="Enter your NAME here" maxlength="10">
         <a href="#" class="flex-item" id="play-button" onClick="startGame()">Play solo</a>
         <a href="#" class="flex-item" id="create-room-button" onClick="createRoom()">Create room</a>
-        <a href="#" class="flex-item" id="join-room-button" onClick="joinTeamInput()">Join room</a>
+        <a href="#" class="flex-item" id="join-room-button" onClick="joinRoomInput()">Join room</a>
       </div>
       <div class="flex-container" id="lobby-section" display="none">
+        <div class="flex-item" id="room-num">
+          <p>
+            Your room code is:
+            <span id="code-num"></span>
+          </p>
+        </div>
         <a href="#"class="flex-item player" id="bluteam">BLUE</a>
         <a href="#"class="flex-item player" id="redteam">RED</a>
         <p class="flex-item player" id="bp1"></p>
@@ -177,13 +198,13 @@
         <p class="flex-item player" id="rp5"></p>
         <p class="flex-item player" id="bp5"></p>
         <p class="flex-item player" id="rp5"></p>
-        <a href="#" class="flex-item button">Switch Teams</a>
+        <a href="#" class="flex-item button">Switch teams</a>
         <a href="#" class="flex-item button" onClick="backToMenu()">Leave team</a>
       </div>
 
       <div class="flex-container" id="join-section" display="none">
-        <input class="flex-item" type="text" onclick="clearfield();" id="code-input" value="Enter your CODE here" maxlength="4" autofocus>
-        <a href="#" class="flex-item button" id="join">Join</a>
+        <input class="flex-item" type="text" onclick="clearfieldCode();" id="code-input" value="Enter your CODE here" maxlength="4">
+        <a href="#" class="flex-item button" onClick="joinRoom()"id="join">Join</a>
         <a href="#" class="flex-item button" onClick="backToMenu()">Cancel</a>
       </div>
 
