--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
 
       #play-button{
         flex: 1 100%;
-        background-color: #6ae646;
+        background-color: DodgerBlue;
       }
       #create-room-button{
         flex: 1;
         margin-right:10px;
-        background-color: DodgerBlue;
+        background-color: gray;
       }
 
       #join-room-button{
@@ -101,9 +101,9 @@
         display: none;
         position: absolute;
         width:500;
-        height:400;
+        height:410;
         left:calc(50% - 248px);
-        top:30%;
+        top:calc(50% - 198px);
       }
 
       #lobby-section .flex-item{
@@ -129,10 +129,14 @@
         background-color: gray;
       }
 
-      #room-num{
-        background-color: gray;
+      .flex-container .flex-item.banner{
         width:100% !important;
         padding: 10px 0px 5px 0px;
+        margin: 5px 0px 5px 0px;
+      }
+
+      #room-num{
+        background-color: gray;
       }
 
       #code-num{
@@ -142,6 +146,13 @@
         background-color: #efefef;
         padding:1px 10px 2px 10px;
         letter-spacing: 0px;
+      }
+
+      .icon{
+        background-image:url('/static/checkmark.png');
+        background-repeat:no-repeat;
+        background-position:right;
+        background-size: 30px 30px;
       }
       /* JOIN SECTION */
       #join-section{
@@ -180,26 +191,29 @@
         <a href="#" class="flex-item" id="join-room-button" onClick="joinRoomInput()">Join room</a>
       </div>
       <div class="flex-container" id="lobby-section" display="none">
-        <div class="flex-item" id="room-num">
+        <div class="flex-item banner" id="room-num">
           <p>
             Your room code is:
             <span id="code-num"></span>
           </p>
         </div>
-        <a href="#"class="flex-item player" id="bluteam">BLUE</a>
-        <a href="#"class="flex-item player" id="redteam">RED</a>
-        <p class="flex-item player" id="bp1"></p>
-        <p class="flex-item player" id="rp1"></p>
-        <p class="flex-item player" id="bp2"></p>
-        <p class="flex-item player" id="rp2"></p>
-        <p class="flex-item player" id="bp3"></p>
-        <p class="flex-item player" id="rp3"></p>
-        <p class="flex-item player" id="bp4"></p>
-        <p class="flex-item player" id="rp4"></p>
-        <p class="flex-item player" id="bp5"></p>
-        <p class="flex-item player" id="rp5"></p>
-        <a href="#" class="flex-item button">Switch teams</a>
+        <p href="#"class="flex-item player" id="bluteam">BLUE</p>
+        <p href="#"class="flex-item player" id="redteam">RED</p>
+        <p class="flex-item player icon" id="bp1"></p>
+        <p class="flex-item player icon" id="rp1"></p>
+        <p class="flex-item player icon" id="bp2"></p>
+        <p class="flex-item player icon" id="rp2"></p>
+        <p class="flex-item player icon" id="bp3"></p>
+        <p class="flex-item player icon" id="rp3"></p>
+        <p class="flex-item player icon" id="bp4"></p>
+        <p class="flex-item player icon" id="rp4"></p>
+        <p class="flex-item player icon" id="bp5"></p>
+        <p class="flex-item player icon" id="rp5"></p>
+        <a href="#" class="flex-item button" onClick="switchTeams()">Switch teams</a>
         <a href="#" class="flex-item button" onClick="backToMenu()">Leave team</a>
+        <a href="#" class="flex-item banner" onClick="playerReady()" id="start-game">
+          Toggle ready
+        </a>
       </div>
 
       <div class="flex-container" id="join-section" display="none">
