--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
       <!-- MAIN MENU -->
       <div class="flex-container" id="main-section">
         <input class="flex-item" type="text" onclick="clearfield();" id="name-input" value="Enter your NAME here" maxlength="10">
-        <a href="#" class="flex-item" id="play-button" onClick="startGame()">Play solo</a>
+        <a href="#" class="flex-item" id="play-button" onClick="startGame()">Play solo ( W I P )</a>
         <a href="#" class="flex-item" id="create-room-button" onClick="createRoom()">Create room</a>
         <a href="#" class="flex-item" id="join-room-button" onClick="joinRoomInput()">Join room</a>
         <p class="flex-item" id="numplayers"> Currently playing:
